--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Frontend Mentor Challenges</title>
   </head>
   <body>
-    <a href="/stats-preview-card-component">Stats preview card component</a>
+    <a href="/stats-preview-card-component/index.html"
+      >Stats preview card component</a
+    >
   </body>
 </html>
