--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <a href="/stats-preview-card-component/index.html"
       >Stats preview card component</a
     >
+    <a href="/3-column-preview-card-component/index.html"
+      >3-column preview card component</a
+    >
   </body>
 </html>
