--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Frontend Mentor Challenges</title>
   </head>
   <body>
-    <a href="/stats-preview-card-component/index.html"
+    <a
+      href="/frontend-mentor-challenges/stats-preview-card-component/index.html"
       >Stats preview card component</a
     >
-    <a href="/3-column-preview-card-component/index.html"
+    <a
+      href="/frontend-mentor-challenges/3-column-preview-card-component/index.html"
       >3-column preview card component</a
     >
   </body>
