feat: add profile-card-component

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
       href="/frontend-mentor-challenges/3-column-preview-card-component/index.html"
       >3-column preview card component</a
     >
+    <a href="/frontend-mentor-challenges/profile-card-component/index.html"
+      >Profile card component</a
+    >
   </body>
 </html>
