--- a/3-column-preview-card-component/index.html
+++ b/3-column-preview-card-component/index.html
@@ -56,7 +56,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">durashere</a>.
+      >. Coded by <a href="https://github.com/durashere">durashere</a>.
     </div>
   </body>
 </html>
