feat: add social-proof-section

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     <a href="/frontend-mentor-challenges/profile-card-component/index.html"
       >Profile card component</a
     >
+    <a href="/frontend-mentor-challenges/social-proof-section/index.html"
+      >Social proof section</a
+    >
   </body>
 </html>
