feat: add single-price-grid-component

--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
     <a href="/frontend-mentor-challenges/social-proof-section/index.html"
       >Social proof section</a
     >
+    <a href="/frontend-mentor-challenges/single-price-grid-component/index.html"
+      >Single price grid component</a
+    >
   </body>
 </html>
