feat: add single-price-grid-component

--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
     <a href="/frontend-mentor-challenges/single-price-grid-component/index.html"
       >Single price grid component</a
     >
+    <a href="/frontend-mentor-challenges/order-summary-component/index.html"
+      >Order summary component</a
+    >
   </body>
 </html>
