feat: add four-card-feature-section

--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
     <a href="/frontend-mentor-challenges/order-summary-component/index.html"
       >Order summary component</a
     >
+    <a href="/frontend-mentor-challenges/four-card-feature-section/index.html"
+      >Four card feature section</a
+    >
   </body>
 </html>
